Version 1.1.0
  Enhancements:
  - Add efficient support for translating between Oracle SDO_GEOMETRY and
    PostGIS geometry.  Supported geometry types are POINT, LINE, POLYGON,
    MULTIPOINT, MULTILINE and MULTIPOLYGON.
    Courtesy of Oslandia, implemented by Vincent Mora.

  Bugfixes:´
  - Fix a bug introduced in 1.0.0 that leads to crashes when LOB columns
    are modified.

Version 1.0.0, released 2014-04-08
  Enhancements:
  - Add function oracle_diag(name) for diagnostic purposes.
    ATTENTION: Use "ALTER EXTENSION oracle_fdw UPDATE" when upgrading
    from a previous version of oracle_fdw.
  - Avoid unnecessary local filtering for pushed down WHERE clauses with
    internal parameters.
  - Add support for triggers on foreign tables for PostgreSQL 9.4.

  Bugfixes:
  - Fix logic error that keeps Oracle connections from closing.
  - Fix "cache lookup failed for type 0" in queries with string parameters.
    Per report from Adolfho Lopes.

Version 0.9.10 (beta), released 2013-12-24
  Enhancements:
  - Add support for INSERT, DELETE and UPDATE.
    This is a major rewrite that might cause some destabilization in
    existing functionality.
  - Add new column option "key" to indicate primary key columns.
    This is needed for UPDATE and DELETE.
  - Add new table option "readonly" to forbid data modifying statements.
  - Improved transaction handling for data modifying statements.
    COMMIT, ROLLBACK and SAVEPOINT will work as expected.
  - Add paths for Oracle 12.1 to the Makefile.
    Patch by Guillaume Lelarge.

  Bugfixes:
  - Don't try to push down the division operator.
    That would produce incorrect results for numeric data types.

Version 0.9.9 (beta), released 2013-08-07
  Enhancements:
  - Enable build with PostgreSQL 9.3.

  Bugfixes:
  - Fix error "ORA-01406: fetched column value was truncated"
    caused by timestamps with precision greater than 6.
    Per report from David E. Wheeler.