@@ -487,6 +487,53 @@ To upgrade from an oracle_fdw version before 1.0.0, use
 
   ALTER EXTENSION oracle_fdw UPDATE;
 
+Running the regression tests:
+-----------------------------
+
+Unless you are developing oracle_fdw or want to test its functionality
+on an exotic platform, you don't have to do that.
+
+For the regression tests to work, you must have a PostgreSQL cluster
+and an Oracle server (with Locator or Spatial) running, and the oracle_fdw
+binaries must be installed.  The regression tests will create a database
+called "contrib_regression" and run a number of tests.
+For the PostGIS regression tests to succeed, the PostGIS binaries must be
+installed.
+
+The Oracle database must be prepared as follows:
+- A user "scott" with password "tiger" must exist (unless you want to edit
+  the regression test scripts).  The user needs CREATE SESSION and CREATE TABLE
+  system privileges and enough quota on its default tablespace, as well as
+  SELECT privileges on V$SQL and V$SQL_PLAN.
+- Two tables must be created as follows:
+  CREATE TABLE scott.typetest1 (
+     id  NUMBER(5) PRIMARY KEY,
+     c   CHAR(10 CHAR),
+     nc  NCHAR(10),
+     vc  VARCHAR2(10 CHAR),
+     nvc NVARCHAR2(10),
+     lc  CLOB,
+     r   RAW(10),
+     u   RAW(16),
+     lb  BLOB,
+     lr  LONG RAW
+  ) SEGMENT CREATION IMMEDIATE;
+
+  CREATE TABLE scott.gis (
+     id  NUMBER(5) PRIMARY KEY,
+     g   MDSYS.SDO_GEOMETRY
+  ) SEGMENT CREATION IMMEDIATE;
+
+Set the environment for the PostgreSQL server so that it can establish an
+Oracle connection without connect string:
+If the Oracle server is on the same machine, set the environment variables
+ORACLE_SID and ORACLE_HOME appropriately, for a remote server set the
+environment variable TWO_TASK to the connect string.
+
+The regression tests are run as follows:
+
+  $ make installcheck
+
 7. Internals
 ============
 
