@@ -1,0 +1,155 @@
+/*
+ * Install the extension and define the tables.
+ * All the foreign tables defined refer to the same Oracle table.
+ */
+SET client_min_messages = WARNING;
+CREATE EXTENSION oracle_fdw;
+-- TWO_TASK or ORACLE_HOME and ORACLE_SID must be set in the server's environment for this to work
+CREATE SERVER oracle FOREIGN DATA WRAPPER oracle_fdw OPTIONS (dbserver '');
+CREATE USER MAPPING FOR PUBLIC SERVER oracle OPTIONS (user 'SCOTT', password 'tiger');
+-- Oracle table TYPETEST1 must be created for this one
+CREATE FOREIGN TABLE typetest1 (
+   id  integer OPTIONS (key 'yes') NOT NULL,
+   q   double precision,
+   c   character(10),
+   nc  character(10),
+   vc  character varying(10),
+   nvc character varying(10),
+   lc  text,
+   r   bytea,
+   u   uuid,
+   lb  bytea,
+   lr  bytea
+) SERVER oracle OPTIONS (table 'TYPETEST1');
+ALTER FOREIGN TABLE typetest1 DROP q;
+-- a table that is missing some fields
+CREATE FOREIGN TABLE shorty (
+   id  integer OPTIONS (key 'yes') NOT NULL,
+   c   character(10)
+) SERVER oracle OPTIONS (table 'TYPETEST1');
+-- a table that has some extra fields
+CREATE FOREIGN TABLE longy (
+   id  integer OPTIONS (key 'yes') NOT NULL,
+   c   character(10),
+   nc  character(10),
+   vc  character varying(10),
+   nvc character varying(10),
+   lc  text,
+   r   bytea,
+   u   uuid,
+   lb  bytea,
+   lr  bytea,
+   x   integer
+) SERVER oracle OPTIONS (table 'TYPETEST1');
+/*
+ * Empty the table and INSERT some samples.
+ */
+DELETE FROM typetest1;
+INSERT INTO typetest1 (id, c, nc, vc, nvc, lc, r, u, lb, lr) VALUES (
+   1,
+   'fixed char',
+   'nat''l char',
+   'varlena',
+   'nat''l var',
+   'character large object',
+   bytea('\xDEADBEEF'),
+   uuid('055e26fa-f1d8-771f-e053-1645990add93'),
+   bytea('\xDEADBEEF'),
+   bytea('\xDEADBEEF')
+);
+INSERT INTO shorty (id, c) VALUES (2, NULL);
+INSERT INTO typetest1 (id, c, nc, vc, nvc, lc, r, u, lb, lr) VALUES (
+   3,
+   E'a\u001B\u0007\u000D\u007Fb',
+   E'a\u001B\u0007\u000D\u007Fb',
+   E'a\u001B\u0007\u000D\u007Fb',
+   E'a\u001B\u0007\u000D\u007Fb',
+   E'a\u001B\u0007\u000D\u007Fb ABC' || repeat('X', 9000),
+   bytea('\xDEADF00D'),
+   uuid('055f3b32-a02c-4532-e053-1645990a6db2'),
+   bytea('\xDEADF00DDEADF00DDEADF00D'),
+   bytea('\xDEADF00DDEADF00DDEADF00D')
+);
+INSERT INTO typetest1 (id, c, nc, vc, nvc, lc, r, u, lb, lr) VALUES (
+   4,
+   'short',
+   'short',
+   'short',
+   'short',
+   'short',
+   bytea('\xDEADF00D'),
+   uuid('0560ee34-2ef9-1137-e053-1645990ac874'),
+   bytea('\xDEADF00D'),
+   bytea('\xDEADF00D')
+);
+/*
+ * Test SELECT, UPDATE ... RETURNING, DELETE and transactions.
+ */
+-- simple SELECT
+SELECT id, c, nc, vc, nvc, length(lc), r, u, length(lb), length(lr), x FROM longy ORDER BY id;
+WARNING:  column number 11 of foreign table "longy" does not exist in foreign Oracle table, will be replaced by NULL
+ id |          c           |          nc          |        vc        |       nvc        | length |     r      |                  u                   | length | length | x 
+----+----------------------+----------------------+------------------+------------------+--------+------------+--------------------------------------+--------+--------+---
+  1 | fixed char           | nat'l char           | varlena          | nat'l var        |     22 | \xdeadbeef | 055e26fa-f1d8-771f-e053-1645990add93 |      4 |      4 |  
+  2 |                      |                      |                  |                  |        |            |                                      |        |        |  
+  3 | a\x1B\x07\r\x7Fb     | a\x1B\x07\r\x7Fb     | a\x1B\x07\r\x7Fb | a\x1B\x07\r\x7Fb |   9010 | \xdeadf00d | 055f3b32-a02c-4532-e053-1645990a6db2 |     12 |     12 |  
+  4 | short                | short                | short            | short            |      5 | \xdeadf00d | 0560ee34-2ef9-1137-e053-1645990ac874 |      4 |      4 |  
+(4 rows)
+
+-- mass UPDATE
+WITH upd (id, c, lb) AS
+   (UPDATE longy SET c = substr(c, 1, 9) || 'u',
+                    lb = lb || bytea('\x00'),
+                    lr = lr || bytea('\x00')
+   WHERE id < 3 RETURNING id + 1, c, lb)
+SELECT * FROM upd ORDER BY id;
+WARNING:  column number 11 of foreign table "longy" does not exist in foreign Oracle table, will be replaced by NULL
+ id |     c      |      lb      
+----+------------+--------------
+  2 | fixed chau | \xdeadbeef00
+  3 |            | 
+(2 rows)
+
+-- transactions
+BEGIN;
+DELETE FROM shorty WHERE id = 3;
+SAVEPOINT one;
+-- will cause an error
+INSERT INTO shorty (id, c) VALUES (1, 'c');
+ERROR:  error executing query: OCIStmtExecute failed to execute remote query
+DETAIL:  ORA-00001: unique constraint (LAURENZ.TYPETEST1_PKEY) violated
+ROLLBACK TO one;
+INSERT INTO shorty (id, c) VALUES (3, 'c');
+ROLLBACK TO one;
+COMMIT;
+-- see if the correct data are in the table
+SELECT id, c FROM typetest1 ORDER BY id;
+ id |     c      
+----+------------
+  1 | fixed chau
+  2 | 
+  4 | short     
+(3 rows)
+
+/*
+ * Test EXPLAIN support.
+ */
+EXPLAIN (COSTS off) UPDATE typetest1 SET lc = current_timestamp WHERE id < 4 RETURNING id + 1;
+                                                                            QUERY PLAN                                                                             
+-------------------------------------------------------------------------------------------------------------------------------------------------------------------
+ Update on typetest1
+   Oracle statement: UPDATE "TYPETEST1" SET "LC" = :p7 WHERE "ID" = :k1 RETURNING "ID", "LC" INTO :r1, :r7
+   ->  Foreign Scan on typetest1
+         Oracle query: SELECT /*d2468eee30dbe5fc5125064273dfeca0*/ "ID", "C", "NC", "VC", "NVC", "R", "U", "LB", "LR" FROM "TYPETEST1" WHERE ("ID" < 4) FOR UPDATE
+(4 rows)
+
+EXPLAIN (VERBOSE on, COSTS off) SELECT * FROM shorty;
+                                       QUERY PLAN                                       
+----------------------------------------------------------------------------------------
+ Foreign Scan on public.shorty
+   Output: id, c
+   Oracle query: SELECT /*c46e82933e70cd3612b616bdeca201b4*/ "ID", "C" FROM "TYPETEST1"
+   Oracle plan: SELECT STATEMENT
+   Oracle plan:   TABLE ACCESS FULL TYPETEST1
+(5 rows)
+
